objects/WW_CaseHistory__c.object
<CustomObject><fields>
        <fullName>CaseId__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case History Copies</relationshipLabel>
        <relationshipName>Case_History_Copy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Field__c</fullName>
        <label>Changed Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OldValue__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Case History</label><nameField>
        <displayFormat>{0}</displayFormat>
        <label>CaseHistory Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Case History</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>